--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
   <script>
     /********** 1. EDIT THESE CONSTANTS FOR YOUR PROJECT **********/
-    const CLIENT_ID  = "YOUR_OAUTH_WEB_CLIENT_ID.apps.googleusercontent.com";
+    const CLIENT_ID  = "297911594147-9dbblho1k834h239f7g7tfhqtr6c1gvf.apps.googleusercontent.com";
     const API_KEY    = "AIzaSyDb4uWxi5LWSQXzFvf87cJtonj6zMzNCks";
     const PROJECT_ID = "durable-ripsaw-477914-g0";
     const DATASET    = "ecommerce"; // e.g. "olist"
@@ -506,3 +506,4 @@
   </script>
 </body>
 </html>
+
