--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Brazilian E-Commerce Dashboard (BigQuery)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Google API JS (gapi) -->
+  <script src="https://apis.google.com/js/api.js"></script>
+
   <!-- Plotly for interactive charts -->
   <script src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
 
@@ -83,7 +86,6 @@
     #signout-button {
       background: #eee;
       color: #333;
-      display: none;
     }
 
     #status {
@@ -168,64 +170,70 @@
       </div>
       <div id="auth">
         <button id="signin-button">Sign in with Google</button>
-        <button id="signout-button">Sign out</button>
+        <button id="signout-button" style="display:none;">Sign out</button>
       </div>
     </header-top>
-    <div id="status"><span>Loading Google Identity library …</span></div>
+    <div id="status"><span>Loading Google API …</span></div>
   </header>
 
   <main>
     <section class="grid">
+      <!-- Customers per state -->
       <article class="card">
         <div class="card-header">
           <div>
             <div class="card-title">Customer Distribution per State</div>
-            <div class="card-subtitle">Unique customers by state</div>
+            <div class="card-subtitle">Unique customers by state (dim_customers)</div>
           </div>
         </div>
         <div id="customer-treemap" class="chart"></div>
       </article>
 
+      <!-- Sellers per state -->
       <article class="card">
         <div class="card-header">
           <div>
             <div class="card-title">Seller Distribution per State</div>
-            <div class="card-subtitle">Sellers by state</div>
+            <div class="card-subtitle">Sellers by state (dim_sellers)</div>
           </div>
         </div>
         <div id="seller-treemap" class="chart"></div>
       </article>
 
+      <!-- Top 100 sellers -->
       <article class="card">
         <div class="card-header">
           <div>
             <div class="card-title">Top 100 Sellers</div>
-            <div class="card-subtitle">By number of order items</div>
+            <div class="card-subtitle">By number of order items (fact_orders)</div>
           </div>
         </div>
         <div id="top-sellers" class="chart"></div>
       </article>
 
+      <!-- Top 50 product categories -->
       <article class="card">
         <div class="card-header">
           <div>
             <div class="card-title">Top 50 Product Categories Sold</div>
-            <div class="card-subtitle">Order item count</div>
+            <div class="card-subtitle">Order item count (fact_orders + olist_products)</div>
           </div>
         </div>
         <div id="top-categories" class="chart"></div>
       </article>
 
+      <!-- Sales per month -->
       <article class="card">
         <div class="card-header">
           <div>
             <div class="card-title">Sales per Month</div>
-            <div class="card-subtitle">Number of orders by purchase month</div>
+            <div class="card-subtitle">Number of orders by purchase month (fact_orders)</div>
           </div>
         </div>
         <div id="sales-month" class="chart"></div>
       </article>
 
+      <!-- Notes -->
       <article class="card">
         <div class="card-header">
           <div>
@@ -234,22 +242,24 @@
           </div>
         </div>
         <div class="chart" style="padding:12px;font-size:13px;color:#666;">
-          You can duplicate the JS query pattern below to add average review scores,
-          revenue by state, payment types, etc.
+          You can duplicate the JS query pattern below to add:
+          average review scores, revenue by state, payment types, etc.
         </div>
       </article>
     </section>
   </main>
 
   <script>
-    /********** 1. PROJECT CONSTANTS **********/
-    const CLIENT_ID  = "297911594147-9dbblho1k834h239f7g7tfhqtr6c1gvf.apps.googleusercontent.com";
+    /********** 1. EDIT THESE CONSTANTS FOR YOUR PROJECT **********/
+    const CLIENT_ID  = "YOUR_OAUTH_WEB_CLIENT_ID.apps.googleusercontent.com"; // <-- change
+    const API_KEY    = "YOUR_BROWSER_API_KEY";                                 // <-- change
     const PROJECT_ID = "durable-ripsaw-477914-g0";
     const DATASET    = "ecommerce";
     const SCOPES     = "https://www.googleapis.com/auth/bigquery.readonly";
 
-    let tokenClient = null;
-    let accessToken = null;
+    const DISCOVERY_DOCS = [
+      "https://bigquery.googleapis.com/$discovery/rest?version=v2"
+    ];
 
     /********** 2. SMALL HELPERS **********/
     function setStatus(text, isError = false) {
@@ -259,47 +269,31 @@
     }
 
     async function runQuery(sql) {
-      if (!accessToken) {
-        throw new Error("No access token. Please sign in first.");
-      }
-
-      const response = await fetch(
-        `https://bigquery.googleapis.com/bigquery/v2/projects/${PROJECT_ID}/queries`,
-        {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "Authorization": "Bearer " + accessToken
-          },
-          body: JSON.stringify({
-            query: sql,
-            useLegacySql: false
-          })
+      const request = {
+        projectId: PROJECT_ID,
+        resource: {
+          query: sql,
+          useLegacySql: false
         }
-      );
-
-      const data = await response.json();
-      if (!response.ok || data.error) {
-        throw new Error(
-          (data.error && data.error.message) || response.statusText
-        );
-      }
-      return data.rows || [];
+      };
+      const res = await gapi.client.bigquery.jobs.query(request);
+      const rows = res.result.rows || [];
+      return rows;
     }
 
-    /********** 3. CHART BUILDERS **********/
+    /********** 3. CHART BUILDERS (DIM/FACT FIRST, RAW IF NEEDED) **********/
+    // 3.1 Customers by state (dim_customers)
     async function chartCustomerDistribution() {
       const sql = `
         SELECT
           customer_state,
-          COUNT(DISTINCT customer_unique_id) AS customers
-        FROM \`${PROJECT_ID}.${DATASET}.olist_customers_dataset\`
+          COUNT(*) AS customers
+        FROM \`${PROJECT_ID}.${DATASET}.dim_customers\`
         GROUP BY customer_state
       `;
       const rows = await runQuery(sql);
       const labels = [];
       const values = [];
-
       rows.forEach(r => {
         labels.push(r.f[0].v);
         values.push(Number(r.f[1].v));
@@ -317,18 +311,18 @@
       }, { responsive: true });
     }
 
+    // 3.2 Sellers by state (dim_sellers)
     async function chartSellerDistribution() {
       const sql = `
         SELECT
           seller_state,
           COUNT(*) AS sellers
-        FROM \`${PROJECT_ID}.${DATASET}.olist_sellers_dataset\`
+        FROM \`${PROJECT_ID}.${DATASET}.dim_sellers\`
         GROUP BY seller_state
       `;
       const rows = await runQuery(sql);
       const labels = [];
       const values = [];
-
       rows.forEach(r => {
         labels.push(r.f[0].v);
         values.push(Number(r.f[1].v));
@@ -346,13 +340,17 @@
       }, { responsive: true });
     }
 
+    // 3.3 Top 100 sellers (fact_orders + dim_sellers)
     async function chartTopSellers() {
       const sql = `
         SELECT
-          seller_id,
+          s.seller_id,
+          COALESCE(s.seller_city, 'Unknown') AS seller_city,
           COUNT(*) AS items
-        FROM \`${PROJECT_ID}.${DATASET}.olist_order_items_dataset\`
-        GROUP BY seller_id
+        FROM \`${PROJECT_ID}.${DATASET}.fact_orders\` f
+        JOIN \`${PROJECT_ID}.${DATASET}.dim_sellers\` s
+          ON f.seller_id = s.seller_id
+        GROUP BY s.seller_id, seller_city
         ORDER BY items DESC
         LIMIT 100
       `;
@@ -360,12 +358,16 @@
       const ranks = [];
       const values = [];
       const labels = [];
+      const hover = [];
 
       rows.forEach((r, i) => {
         ranks.push(i + 1);
-        values.push(Number(r.f[1].v));
-        const sid = r.f[0].v || "";
-        labels.push(sid.substring(0, 8) + "…");
+        const sellerId = r.f[0].v || "";
+        const city = r.f[1].v || "Unknown";
+        const count = Number(r.f[2].v);
+        values.push(count);
+        labels.push(sellerId.substring(0, 8) + "…");
+        hover.push(`Seller: ${sellerId}<br>City: ${city}`);
       });
 
       Plotly.newPlot("top-sellers", [{
@@ -374,8 +376,9 @@
         y: values,
         text: labels,
         textposition: "auto",
+        hovertext: hover,
         hovertemplate:
-          "Rank: %{x}<br>Seller ID: %{text}<br>Order items: %{y}<extra></extra>"
+          "Rank: %{x}<br>%{hovertext}<br>Order items: %{y}<extra></extra>"
       }], {
         margin: { t: 20, l: 40, r: 10, b: 40 },
         xaxis: { title: "Seller rank (1 = highest)" },
@@ -383,14 +386,15 @@
       }, { responsive: true });
     }
 
+    // 3.4 Top 50 product categories (fact_orders + raw olist_products + translation)
     async function chartTopCategories() {
       const sql = `
         SELECT
           COALESCE(t.product_category_name_english, p.product_category_name) AS category,
           COUNT(*) AS items
-        FROM \`${PROJECT_ID}.${DATASET}.olist_order_items_dataset\` oi
-        JOIN \`${PROJECT_ID}.${DATASET}.olist_products_dataset\` p
-          ON oi.product_id = p.product_id
+        FROM \`${PROJECT_ID}.${DATASET}.fact_orders\` f
+        JOIN \`${PROJECT_ID}.${DATASET}.olist_products\` p
+          ON f.product_id = p.product_id
         LEFT JOIN \`${PROJECT_ID}.${DATASET}.product_category_name_translation\` t
           ON p.product_category_name = t.product_category_name
         GROUP BY category
@@ -398,12 +402,11 @@
         LIMIT 50
       `;
       const rows = await runQuery(sql);
-
       let arr = rows.map(r => ({
         name: r.f[0].v || "Unknown",
         count: Number(r.f[1].v)
       }));
-
+      // Sort ascending so highest at top of horizontal bar chart
       arr.sort((a, b) => a.count - b.count);
 
       const names = arr.map(x => x.name);
@@ -416,24 +419,24 @@
         x: values,
         hovertemplate: "Category: %{y}<br>Order items: %{x}<extra></extra>"
       }], {
-        margin: { t: 20, l: 150, r: 10, b: 30 },
+        margin: { t: 20, l: 170, r: 10, b: 30 },
         xaxis: { title: "Count of order items" }
       }, { responsive: true });
     }
 
+    // 3.5 Sales per month (fact_orders)
     async function chartSalesPerMonth() {
       const sql = `
         SELECT
           FORMAT_TIMESTAMP('%Y-%m', order_purchase_timestamp) AS ym,
-          COUNT(*) AS orders
-        FROM \`${PROJECT_ID}.${DATASET}.olist_orders_dataset\`
+          COUNT(DISTINCT order_id) AS orders
+        FROM \`${PROJECT_ID}.${DATASET}.fact_orders\`
         GROUP BY ym
         ORDER BY ym
       `;
       const rows = await runQuery(sql);
       const months = [];
       const counts = [];
-
       rows.forEach(r => {
         months.push(r.f[0].v);
         counts.push(Number(r.f[1].v));
@@ -464,64 +467,63 @@
       setStatus("Dashboard ready. Hover / zoom on any chart.");
     }
 
-    /********** 4. GOOGLE IDENTITY SERVICES INIT **********/
-    function gisLoaded() {
-      setStatus("Google Identity library loaded. Click 'Sign in with Google'.");
+    /********** 4. AUTH & INIT **********/
+    function initClient() {
+      gapi.client
+        .init({
+          apiKey: API_KEY,
+          clientId: CLIENT_ID,
+          discoveryDocs: DISCOVERY_DOCS,
+          scope: SCOPES
+        })
+        .then(() => {
+          const auth = gapi.auth2.getAuthInstance();
+          const signInBtn = document.getElementById("signin-button");
+          const signOutBtn = document.getElementById("signout-button");
 
-      const signInBtn = document.getElementById("signin-button");
-      const signOutBtn = document.getElementById("signout-button");
-
-      tokenClient = google.accounts.oauth2.initTokenClient({
-        client_id: CLIENT_ID,
-        scope: SCOPES,
-        callback: async (response) => {
-          if (response.error) {
-            console.error("Token error:", response);
-            setStatus("Error getting access token: " + response.error, true);
-            return;
+          function updateSigninStatus(isSignedIn) {
+            if (isSignedIn) {
+              signInBtn.style.display = "none";
+              signOutBtn.style.display = "inline-block";
+              const user = auth.currentUser.get();
+              const email = user.getBasicProfile().getEmail();
+              setStatus(`Signed in as ${email}. Loading charts …`);
+              renderAllCharts().catch(err => {
+                console.error("Query error:", err);
+                setStatus("Error running queries. Open browser console for details.", true);
+              });
+            } else {
+              signInBtn.style.display = "inline-block";
+              signOutBtn.style.display = "none";
+              setStatus("Please sign in with your Google account to load BigQuery data.");
+            }
           }
-          accessToken = response.access_token;
-          signInBtn.style.display = "none";
-          signOutBtn.style.display = "inline-block";
-          setStatus("Signed in. Loading charts …");
-          try {
-            await renderAllCharts();
-          } catch (err) {
-            console.error("Error running queries:", err);
-            setStatus("Error running queries. Check console.", true);
-          }
-        }
-      });
 
-      signInBtn.onclick = () => {
-        setStatus("Opening Google sign-in …");
-        tokenClient.requestAccessToken({ prompt: "consent" });
-      };
+          auth.isSignedIn.listen(updateSigninStatus);
+          updateSigninStatus(auth.isSignedIn.get());
 
-      signOutBtn.onclick = () => {
-        if (accessToken) {
-          google.accounts.oauth2.revoke(accessToken, () => {
-            accessToken = null;
-            signInBtn.style.display = "inline-block";
-            signOutBtn.style.display = "none";
-            setStatus("Signed out. Sign in again to reload data.");
-          });
-        }
-      };
+          signInBtn.onclick = () => auth.signIn();
+          signOutBtn.onclick = () => auth.signOut();
+        })
+        .catch(err => {
+          console.error("Init error:", err);
+          setStatus("Error initializing Google client. Check API key / client ID.", true);
+        });
     }
 
-    function gisLoadError() {
-      setStatus("Failed to load Google Identity library.", true);
+    function gapiLoaded() {
+      setStatus("Initializing Google client …");
+      gapi.load("client:auth2", initClient);
     }
+
+    // Kick off when page loads
+    window.addEventListener("load", () => {
+      if (typeof gapi !== "undefined") {
+        gapiLoaded();
+      } else {
+        setStatus("Failed to load Google API JS.", true);
+      }
+    });
   </script>
-
-  <!-- Google Identity Services JS -->
-  <script
-    src="https://accounts.google.com/gsi/client"
-    async
-    defer
-    onload="gisLoaded()"
-    onerror="gisLoadError()"
-  ></script>
 </body>
 </html>
