--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <title>Brazilian E-Commerce Dashboard (BigQuery)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Google API JS (gapi) -->
+  <!-- Google API JS (for BigQuery client) -->
   <script src="https://apis.google.com/js/api.js"></script>
+  <!-- Google Identity Services (new OAuth library) -->
+  <script src="https://accounts.google.com/gsi/client" async defer onload="gisLoaded()"></script>
 
   <!-- Plotly for interactive charts -->
   <script src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
@@ -160,7 +162,6 @@
       overflow-y: auto;
     }
 
-    /* small "About" card text */
     #about-text {
       padding: 12px;
       font-size: 13px;
@@ -177,7 +178,7 @@
         <p>Live from BigQuery — Olist customer, seller, category, and sales metrics.</p>
       </div>
       <div id="auth">
-        <button id="signin-button">Sign in with Google</button>
+        <button id="signin-button" disabled>Sign in with Google</button>
         <button id="signout-button" style="display:none;">Sign out</button>
       </div>
     </header-top>
@@ -186,7 +187,6 @@
 
   <main>
     <section class="grid">
-      <!-- Customers per state -->
       <article class="card">
         <div class="card-header">
           <div>
@@ -197,7 +197,6 @@
         <div id="customer-treemap" class="chart"></div>
       </article>
 
-      <!-- Sellers per state -->
       <article class="card">
         <div class="card-header">
           <div>
@@ -208,7 +207,6 @@
         <div id="seller-treemap" class="chart"></div>
       </article>
 
-      <!-- Top 100 sellers -->
       <article class="card">
         <div class="card-header">
           <div>
@@ -219,18 +217,16 @@
         <div id="top-sellers" class="chart"></div>
       </article>
 
-      <!-- Top 50 product categories -->
       <article class="card">
         <div class="card-header">
           <div>
             <div class="card-title">Top 50 Product Categories Sold</div>
-            <div class="card-subtitle">Order item count (fact_orders + products)</div>
+            <div class="card-subtitle">Order item count (fact_orders + olist_products)</div>
           </div>
         </div>
         <div id="top-categories" class="chart"></div>
       </article>
 
-      <!-- Sales per month -->
       <article class="card">
         <div class="card-header">
           <div>
@@ -241,7 +237,6 @@
         <div id="sales-month" class="chart"></div>
       </article>
 
-      <!-- About / Notes -->
       <article class="card">
         <div class="card-header">
           <div>
@@ -255,9 +250,7 @@
             It shows where customers and sellers are located, which product
             categories sell the most, and how order volume changes by month.
           </p>
-          <p>
-            Use it to answer questions like:
-          </p>
+          <p>Use it to answer questions like:</p>
           <ul>
             <li>Which regions have the strongest customer base vs. seller supply?</li>
             <li>Who are our top sellers and how concentrated is revenue?</li>
@@ -270,9 +263,9 @@
   </main>
 
   <script>
-    /********** 1. EDIT THESE CONSTANTS FOR YOUR PROJECT **********/
-    const CLIENT_ID  = "297911594147-9dbblho1k834h239f7g7tfhqtr6c1gvf.apps.googleusercontent.com"; // <-- change
-    const API_KEY    = "AIzaSyDb4uWxi5LWSQXzFvf87cJtonj6zMzNCks";                                 // <-- change
+    /********** 1. CONFIG **********/
+    const CLIENT_ID  = "297911594147-9dbblho1k834h239f7g7tfhqtr6c1gvf.apps.googleusercontent.com";
+    const API_KEY    = "AIzaSyDb4uWxi5LWSQXzFvf87cJtonj6zMzNCks";
     const PROJECT_ID = "durable-ripsaw-477914-g0";
     const DATASET    = "ecommerce";
     const SCOPES     = "https://www.googleapis.com/auth/bigquery.readonly";
@@ -281,13 +274,26 @@
       "https://bigquery.googleapis.com/$discovery/rest?version=v2"
     ];
 
-    /********** 2. SMALL HELPERS **********/
+    /********** 2. GLOBAL STATE **********/
+    let tokenClient;
+    let gapiInited = false;
+    let gisInited = false;
+
     function setStatus(text, isError = false) {
       const el = document.getElementById("status");
       el.className = isError ? "error" : "";
       el.innerHTML = `<span>${text}</span>`;
     }
 
+    function maybeEnableSignin() {
+      if (gapiInited && gisInited) {
+        const btn = document.getElementById("signin-button");
+        btn.disabled = false;
+        setStatus("Google client ready. Please sign in to load data.");
+      }
+    }
+
+    /********** 3. BIGQUERY HELPER **********/
     async function runQuery(sql) {
       const request = {
         projectId: PROJECT_ID,
@@ -301,8 +307,7 @@
       return rows;
     }
 
-    /********** 3. CHART BUILDERS (DIM/FACT FIRST, RAW IF NEEDED) **********/
-    // 3.1 Customers by state (dim_customers)
+    /********** 4. CHART BUILDERS (same as before) **********/
     async function chartCustomerDistribution() {
       const sql = `
         SELECT
@@ -331,7 +336,6 @@
       }, { responsive: true });
     }
 
-    // 3.2 Sellers by state (dim_sellers)
     async function chartSellerDistribution() {
       const sql = `
         SELECT
@@ -360,7 +364,6 @@
       }, { responsive: true });
     }
 
-    // 3.3 Top 100 sellers (fact_orders + dim_sellers)
     async function chartTopSellers() {
       const sql = `
         SELECT
@@ -406,7 +409,6 @@
       }, { responsive: true });
     }
 
-    // 3.4 Top 50 product categories (fact_orders + raw olist_products + translation)
     async function chartTopCategories() {
       const sql = `
         SELECT
@@ -426,7 +428,6 @@
         name: r.f[0].v || "Unknown",
         count: Number(r.f[1].v)
       }));
-      // Sort ascending so highest at top for horizontal bar
       arr.sort((a, b) => a.count - b.count);
 
       const names = arr.map(x => x.name);
@@ -444,7 +445,6 @@
       }, { responsive: true });
     }
 
-    // 3.5 Sales per month (fact_orders)
     async function chartSalesPerMonth() {
       const sql = `
         SELECT
@@ -487,62 +487,79 @@
       setStatus("Dashboard ready. Hover / zoom on any chart.");
     }
 
-    /********** 4. AUTH & INIT **********/
-    function initClient() {
-      gapi.client
-        .init({
-          apiKey: API_KEY,
-          clientId: CLIENT_ID,
-          discoveryDocs: DISCOVERY_DOCS,
-          scope: SCOPES
-        })
-        .then(() => {
-          const auth = gapi.auth2.getAuthInstance();
-          const signInBtn = document.getElementById("signin-button");
-          const signOutBtn = document.getElementById("signout-button");
+    /********** 5. AUTH & INIT (GIS + gapi.client) **********/
+    // Called by <script src="https://accounts.google.com/gsi/client" onload="gisLoaded()">
+    function gisLoaded() {
+      tokenClient = google.accounts.oauth2.initTokenClient({
+        client_id: CLIENT_ID,
+        scope: SCOPES,
+        callback: () => {} // we set real callback later on click
+      });
+      gisInited = true;
+      maybeEnableSignin();
+    }
 
-          function updateSigninStatus(isSignedIn) {
-            if (isSignedIn) {
-              signInBtn.style.display = "none";
-              signOutBtn.style.display = "inline-block";
-              const user = auth.currentUser.get();
-              const email = user.getBasicProfile().getEmail();
-              setStatus(`Signed in as ${email}. Loading charts …`);
-              renderAllCharts().catch(err => {
-                console.error("Query error:", err);
-                setStatus("Error running queries. Open browser console for details.", true);
-              });
-            } else {
-              signInBtn.style.display = "inline-block";
-              signOutBtn.style.display = "none";
-              setStatus("Please sign in with your Google account to load BigQuery data.");
-            }
-          }
-
-          auth.isSignedIn.listen(updateSigninStatus);
-          updateSigninStatus(auth.isSignedIn.get());
-
-          signInBtn.onclick = () => auth.signIn();
-          signOutBtn.onclick = () => auth.signOut();
-        })
-        .catch(err => {
+    // Load BigQuery client
+    function gapiLoaded() {
+      gapi.load("client", async () => {
+        try {
+          await gapi.client.init({
+            apiKey: API_KEY,
+            discoveryDocs: DISCOVERY_DOCS
+          });
+          gapiInited = true;
+          maybeEnableSignin();
+        } catch (err) {
           console.error("Init error:", err);
           setStatus("Error initializing Google client. Check API key / client ID.", true);
-        });
+        }
+      });
     }
 
-    function gapiLoaded() {
-      setStatus("Initializing Google client …");
-      gapi.load("client:auth2", initClient);
-    }
-
-    // Kick off when page loads
     window.addEventListener("load", () => {
       if (typeof gapi !== "undefined") {
         gapiLoaded();
       } else {
         setStatus("Failed to load Google API JS.", true);
       }
+
+      const signInBtn = document.getElementById("signin-button");
+      const signOutBtn = document.getElementById("signout-button");
+
+      signInBtn.onclick = () => {
+        if (!tokenClient) {
+          setStatus("Auth client not ready yet. Please wait a moment and try again.", true);
+          return;
+        }
+        tokenClient.callback = (resp) => {
+          if (resp.error) {
+            console.error(resp);
+            setStatus("Error getting access token.", true);
+            return;
+          }
+          signInBtn.style.display = "none";
+          signOutBtn.style.display = "inline-block";
+          setStatus("Signed in. Loading charts …");
+          renderAllCharts().catch(err => {
+            console.error("Query error:", err);
+            setStatus("Error running queries. Open browser console for details.", true);
+          });
+        };
+        // First time will show consent / unverified app warning
+        tokenClient.requestAccessToken({ prompt: "consent" });
+      };
+
+      signOutBtn.onclick = () => {
+        const token = gapi.client.getToken();
+        if (token && token.access_token) {
+          google.accounts.oauth2.revoke(token.access_token, () => {
+            gapi.client.setToken(null);
+            signOutBtn.style.display = "none";
+            signInBtn.style.display = "inline-block";
+            setStatus("Signed out. Please sign in to load data.");
+          });
+        }
+      };
     });
   </script>
 </body>
